--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,9 @@ span.desc {
 /*--// header --*/
 
 /*-- banner --*/
-
+.carousel{
+    height: auto !important;
+}
 /* .carousel .item {
     background: -webkit-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), no-repeat;
     background: -moz-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), no-repeat;
@@ -1658,6 +1660,7 @@ ol.carousel-indicators.two {
 /*-- footer --*/
 
 .footer {
+    margin-top: 2em;
     padding: 6em 0;
     background: #1d2931;
 }
