--- a/css/style.css
+++ b/css/style.css
@@ -1084,10 +1084,10 @@ p.sub_p {
     transform: translateY(-2px);
 }
 .visit-description {
-    margin: auto;
+    margin: 24px auto 0;
     padding: 0 24px;
     min-width: 320px;
-    width: 80%;
+    /* width: 80%; */
     text-align: justify;
     text-indent: 2em;
 }
