--- a/css/style.css
+++ b/css/style.css
@@ -2111,7 +2111,7 @@ p.copy-right a:hover {
     color: #fff;
 }
 .gallery_sec {
-    padding-top: 4em;
+    /* padding-top: 1px; */
 }
 
 .tittle_description {
