--- a/css/style.css
+++ b/css/style.css
@@ -1095,8 +1095,14 @@ p.sub_p {
     text-align: justify;
     text-indent: 2em;
 }
-.visit-grid-box, .visit-grid-box .img-responsive {
-    display: inline-block;
+.visit-grid-box {
+    display: block;
+    height: 100%;
+    max-height: 25vw;
+}
+.visit-grid-box .img-responsive {
+    display: block;
+    width: 100%;
     height: 100%;
     object-fit: cover;
 }
